[package]
name = "piledriver"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
description = "A fanmade remaster of the original Boktai trilogy"
documentation = "https://github.com/EarthlySkies/piledriver/wiki"
readme = "README.md"
repository = "https://github.com/EarthlySkies/piledriver"
license = "Apache-2.0"
keywords = ["unofficial", "boktai", "collection", "remaster", "fangame"]
categories = ["games"]
publish = false

[dependencies.bevy]
version = "0.6.0"
default-features = true
features = ["bevy_dynamic_plugin", "dynamic", "trace", "trace_chrome", "trace_tracy", "wgpu_trace", "dds", "tga", "jpeg", "bmp", "flac", "mp3", "wav", "serialize", "wayland", "subpixel_glyph_atlas", "bevy_ci_testing"]

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false
